
--Changed wording to 'View YOUR security tapes' to avoid confusion (some people
  pick a house from the to-rob list and try to click that tape button).

--Better wording of family exit warning (Family needs empty path to exit).

--Better wording on house self-test page (reach your own vault).

--Fixed long painting buy button tool tips that hung off edge of screen.




Version 2    2013-February-27    (private pre-alpha)

--Added recording and playback of time() values in game recording system.  This
  fixes playback timing bugs when the playback machine runs the game slower
  or faster than the original recording machine (or when playback is manually
  slowed or sped up).

--Removed an error-prone initial mouse-warp-to-center call that was potentially
  causing future mouse motion events to be ignored.
  
--Fixed server typo that resulted in stolen paintings not being added to the
  robber's house (thanks Allen Trivette).

--Fixed TextField glitchy behavior when user types forbidden characters.

--Fixed major bug in path finding for family-blocked-in detection 
  (thanks Eric McQuiggan). 

--Fixed tool tip bug that triggered music toggle button tip spuriously 
  (thanks Garrett).

--Fixed so that empty self-test recordings (when user edits backpack but 
  not house map) do not replace last valid self-test recording in database.

--Fixed 'Family blocked in' message overlaying Done button on house load.

--Fixed dead wife sprites overhanging walls (and also moved all dead objects 
  under wall shadows, which looks much better).

--Added better logging of flush operations on server.

--Fixed lingering pitbull attack stance post-robbery.

--Fixed so that erase highlights (darkening) in editor match state of object 
  being erased.

--Changed so that picking up a family member who is standing with a mobile does
  not erase that mobile.

--Fixed so that dead wife not shown carrying money during self tests.
