@@ -299,8 +299,9 @@ class HouseGridDisplay : public PageComponent, public ActionListenerList {
         // inNeighbor pick LBRT neighbor, in that order (L=0, T=3)
         // returns neighbor full map index, or -1 if out of bounds
         int getTileNeighbor( int inFullIndex, int inNeighbor );
-        // checks structural property of neighbor
-        int getTileNeighborStructural( int inFullIndex, int inNeighbor );
+        // checks property of neighbor
+        int getTileNeighborHasProperty( int inFullIndex, int inNeighbor,
+                                        propertyID inProperty );
         
         
         // inFullIndex is tile's full-map index
