@@ -1,4 +1,5 @@
 visionBlocking
 blocking
 shadowMaking
+wall
 structural
