@@ -1,3 +1,4 @@
 structural
+wall
 stuck
 underLayerShaded
