@@ -2,4 +2,5 @@ visionBlocking
 blocking
 shadowMaking
 structural
+wall
 conductive
