@@ -1,2 +1,3 @@
 structural
+wall
 stuck
